--- a/libs/jade/mockup.jade
+++ b/libs/jade/mockup.jade
@@ -59,7 +59,10 @@ block content
 							a(href="#step6") Step 6: Be prepared to deal with problems
 
 			section#step1
-				h2 Step 1: Check if you need permission or approval
+				h2.ref-heading
+					span.ref-heading__heading Step 1: Check if you need permission or approval
+					span.ref-heading__toggle.ref-heading__toggle--on
+						a.js-toggle-ref(href="#!") Added
 				p You may have to get more than one kind of permission or approval before you go ahead with work on your home.
 				p Always check if you need:
 
@@ -83,7 +86,10 @@ block content
 					p If you don’t get the permission or approval you need, you could be fined, prosecuted or made to pay to put things right.
 
 			section#step2
-				h2 Step 2: Find good builders or contractors
+				h2.ref-heading
+					span.ref-heading__heading Step 2: Find good builders or contractors
+					span.ref-heading__toggle.ref-heading__toggle--off
+						a.js-toggle-ref(href="#!") Add reference
 				p Recommendations and references are good ways to find reliable contractors who do a good job.
 				p If you can’t get personal recommendations from people you know, ask contractors for references. It’s best to get:
 
@@ -144,7 +150,10 @@ block content
 				p When you meet them, write down what they say they’ll do - if they don’t end up doing it, having it in writing can help you hold them to their word or get some of your money back.
 
 			section#step3
-				h2 Step 3: Get quotes before you decide who to use
+				h2.ref-heading
+					span.ref-heading__heading Step 3: Get quotes before you decide who to use
+					span.ref-heading__toggle.ref-heading__toggle--off
+						a.js-toggle-ref(href="#!") Add reference
 				p A quote is a promise from the contractor to do the work at a fixed price.
 				p It’s a good idea to get at least 3 written quotes before you decide on a contractor. Comparing quotes will help you decide if you’re getting a fair price.
 				p Don’t rely on a verbal quote - get it in writing. After you say yes to a quote, it’s a binding agreement between you and the contractor, whether it’s written down or not. But having it in writing means you can check what you agreed and prove it if there’s a dispute later.
@@ -190,7 +199,10 @@ block content
 				p You can download a PDF of a #[a(href="#") sample quote].
 
 			section#step4
-				h2 Step 4: Check there’s insurance in place
+				h2.ref-heading
+					span.ref-heading__heading Step 4: Check there’s insurance in place
+					span.ref-heading__toggle.ref-heading__toggle--off
+						a.js-toggle-ref(href="#!") Add reference
 				h3 Contractors’ insurance - what to check
 				p Ask to see insurance policies and check they don’t run out before the work will be finished. If it’s insurance they must have, they have to let you see the policy.
 
@@ -214,7 +226,10 @@ block content
 					p If you don’t have home and contents insurance, it’s worth getting some before the work starts - there’s a bigger risk your home will be damaged or your things stolen while work’s going on.
 
 			section#step5
-				h2 Step 5: Get a written contract
+				h2.ref-heading
+					span.ref-heading__heading Step 5: Get a written contract
+					span.ref-heading__toggle.ref-heading__toggle--off
+						a.js-toggle-ref(href="#!") Add reference
 				p As soon as you give a contractor the go-ahead, you’ve made a contract with them, even if it’s not written down.
 				p But you should always try to get a contract in writing before you give the go-ahead. If the contractor doesn’t do what you agreed, a written contract can help you get what you paid for at least get some of your money back.
 
@@ -299,7 +314,10 @@ block content
 					p Contact the #[a(href="#") Citizens Advice consumer helpline] if you need more help - a trained adviser can give you advice over the phone or by email. Contact the Consumerline if you're in #[a(href="#") Northern Ireland].
 
 			section#step6
-				h2 Step 6: Be prepared to deal with problems
+				h2.ref-heading
+					span.ref-heading__heading Step 6: Be prepared to deal with problems
+					span.ref-heading__toggle.ref-heading__toggle--off
+						a.js-toggle-ref(href="#!") Add reference
 				p Get the contractor’s full contact details before work starts. If you know how to get in touch, it’s easier to deal with any problems that come up.
 				p As soon as something happens that you’re not happy with:
 
