Add general content style to index

--- a/libs/jade/index.jade
+++ b/libs/jade/index.jade
@@ -71,6 +71,8 @@ block content
 				h2#templates Templates
 				ul
 					li
+						a(href="content.html") Content example
+					li
 						a(href="long-form.html") Long form content
 					//li
 					//	a(href="advisor.html") Advisor content
