- Removed icon from adviser callouts - Added adviser callouts to styleguide - Added adviser callout styles to .dap-panel--adviser

--- a/libs/jade/callout.jade
+++ b/libs/jade/callout.jade
@@ -100,6 +100,24 @@ block content
 					| 	&lt;p&gt;Also referred to as Blockquote, this style is when a quote needs to be displayed.&lt;/p&gt;
 					| &lt;/div&gt;
 
+			.example-box-plain
+				.callout--adviser
+					h3 Adviser content
+					p Lorem ipsum dolor sit amet, consectetuer adipiscing elit.
+				.callout--adviser.callout--icon
+					h3 Adviser content with icon
+					p Lorem ipsum dolor sit amet, consectetuer adipiscing elit.
+			pre
+				code.language-html
+					| &lt;div class="callout--adviser"&gt;
+					| 	&lt;h3&gt;Adviser content&lt;/h3&gt;
+					| 	&lt;p&gt;Lorem ipsum dolor sit amet, consectetuer adipiscing elit.&lt;/p&gt;
+					| &lt;/div&gt;
+					| &lt;div class="callout--adviser callout--icon"&gt;
+					| 	&lt;h3&gt;Adviser content with icon&lt;/h3&gt;
+					| 	&lt;p&gt;Lorem ipsum dolor sit amet, consectetuer adipiscing elit.&lt;/p&gt;
+					| &lt;/div&gt;
+
 			h2 Callouts combined
 			p These callouts can be combined both consecutively or combined, someexamples are shown below.
 
