--- a/public/css/site.css
+++ b/public/css/site.css
@@ -8731,7 +8731,6 @@ html[lang="en-SCT"] .main-nav {
 }
 .callout--alert,
 .dap-panel--important,
-.dap-panel--adviser,
 .highlight--warning {
   padding: .75em 1em;
   padding: 12px 16px;
@@ -8783,80 +8782,65 @@ html[lang="en-SCT"] .main-nav {
 }
 .callout--alert:before,
 .dap-panel--important:before,
-.dap-panel--adviser:before,
 .highlight--warning:before {
   color: #191926;
   background-color: #ffbf47;
 }
 .callout--alert > h1,
 .dap-panel--important > h1,
-.dap-panel--adviser > h1,
 .highlight--warning > h1,
 .callout--alert > h2,
 .dap-panel--important > h2,
-.dap-panel--adviser > h2,
 .highlight--warning > h2,
 .callout--alert > h3,
 .dap-panel--important > h3,
-.dap-panel--adviser > h3,
 .highlight--warning > h3 {
   color: #191926;
   font-size: 1.3rem;
 }
 .callout--alert a,
 .dap-panel--important a,
-.dap-panel--adviser a,
 .highlight--warning a {
   border-bottom-color: #ffbf47;
 }
 .callout--alert > *:first-child,
 .dap-panel--important > *:first-child,
-.dap-panel--adviser > *:first-child,
 .highlight--warning > *:first-child {
   padding-top: 0;
 }
 .callout--alert h1:first-child,
 .dap-panel--important h1:first-child,
-.dap-panel--adviser h1:first-child,
 .highlight--warning h1:first-child,
 .callout--alert h2:first-child,
 .dap-panel--important h2:first-child,
-.dap-panel--adviser h2:first-child,
 .highlight--warning h2:first-child,
 .callout--alert h3:first-child,
 .dap-panel--important h3:first-child,
-.dap-panel--adviser h3:first-child,
 .highlight--warning h3:first-child,
 .callout--alert h4:first-child,
 .dap-panel--important h4:first-child,
-.dap-panel--adviser h4:first-child,
 .highlight--warning h4:first-child,
 .callout--alert h5:first-child,
 .dap-panel--important h5:first-child,
-.dap-panel--adviser h5:first-child,
 .highlight--warning h5:first-child,
 .callout--alert h6:first-child,
 .dap-panel--important h6:first-child,
-.dap-panel--adviser h6:first-child,
 .highlight--warning h6:first-child {
   margin-top: 0;
   padding-top: 0;
 }
 .callout--alert li:first-child,
 .dap-panel--important li:first-child,
-.dap-panel--adviser li:first-child,
 .highlight--warning li:first-child {
   padding-top: 0;
 }
 .callout--alert > *:last-child,
 .dap-panel--important > *:last-child,
-.dap-panel--adviser > *:last-child,
 .highlight--warning > *:last-child {
   margin-bottom: 0;
 }
 .callout--alert.callout--icon,
 .dap-panel--important.callout--icon,
-.dap-panel--adviser.callout--icon,
 .highlight--warning.callout--icon {
   border-width: 1px;
   border-left-width: 8px;
@@ -8864,13 +8848,11 @@ html[lang="en-SCT"] .main-nav {
 }
 .callout--alert.callout--icon .callout__link:last-child,
 .dap-panel--important.callout--icon .callout__link:last-child,
-.dap-panel--adviser.callout--icon .callout__link:last-child,
 .highlight--warning.callout--icon .callout__link:last-child {
   border: none;
 }
 .callout--alert.callout--icon:before,
 .dap-panel--important.callout--icon:before,
-.dap-panel--adviser.callout--icon:before,
 .highlight--warning.callout--icon:before {
   font-family: 'FontAwesome';
   font-size: .85rem;
@@ -8885,7 +8867,6 @@ html[lang="en-SCT"] .main-nav {
 }
 .callout--alert:before,
 .dap-panel--important:before,
-.dap-panel--adviser:before,
 .highlight--warning:before {
   color: #191926;
 }
@@ -12747,7 +12728,8 @@ span[id*="overlay_button"] {
   content: "\00a0\f059\00a0";
   font-family: 'Helvetica', 'FontAwesome';
 }
-.callout--adviser {
+.callout--adviser,
+.dap-panel--adviser {
   padding: .75em 1em;
   padding: 12px 16px;
   padding: 0.75rem 1rem;
@@ -12796,50 +12778,67 @@ span[id*="overlay_button"] {
   border-left-width: 8px;
   border-left-width: 0.5rem;
 }
-.callout--adviser:before {
+.callout--adviser:before,
+.dap-panel--adviser:before {
   color: #191926;
   background-color: #007792;
 }
 .callout--adviser > h1,
+.dap-panel--adviser > h1,
 .callout--adviser > h2,
-.callout--adviser > h3 {
+.dap-panel--adviser > h2,
+.callout--adviser > h3,
+.dap-panel--adviser > h3 {
   color: #191926;
   font-size: 1.3rem;
 }
-.callout--adviser a {
+.callout--adviser a,
+.dap-panel--adviser a {
   border-bottom-color: #007792;
 }
-.callout--adviser > *:first-child {
+.callout--adviser > *:first-child,
+.dap-panel--adviser > *:first-child {
   padding-top: 0;
 }
 .callout--adviser h1:first-child,
+.dap-panel--adviser h1:first-child,
 .callout--adviser h2:first-child,
+.dap-panel--adviser h2:first-child,
 .callout--adviser h3:first-child,
+.dap-panel--adviser h3:first-child,
 .callout--adviser h4:first-child,
+.dap-panel--adviser h4:first-child,
 .callout--adviser h5:first-child,
-.callout--adviser h6:first-child {
+.dap-panel--adviser h5:first-child,
+.callout--adviser h6:first-child,
+.dap-panel--adviser h6:first-child {
   margin-top: 0;
   padding-top: 0;
 }
-.callout--adviser li:first-child {
+.callout--adviser li:first-child,
+.dap-panel--adviser li:first-child {
   padding-top: 0;
 }
-.callout--adviser > *:last-child {
+.callout--adviser > *:last-child,
+.dap-panel--adviser > *:last-child {
   margin-bottom: 0;
 }
-.callout--adviser.callout--icon {
+.callout--adviser.callout--icon,
+.dap-panel--adviser.callout--icon {
   border-width: 1px;
   border-left-width: 8px;
   border-left-width: 0.5rem;
 }
-.callout--adviser.callout--icon .callout__link:last-child {
+.callout--adviser.callout--icon .callout__link:last-child,
+.dap-panel--adviser.callout--icon .callout__link:last-child {
   border: none;
 }
-.callout--adviser.callout--icon:before {
+.callout--adviser.callout--icon:before,
+.dap-panel--adviser.callout--icon:before {
   font-family: 'FontAwesome';
   font-size: .85rem;
   font-weight: 300;
-  content: "\f007\00a0\00a0\00a0 Adviser only content";
+  content: "Adviser only content";
   line-height: 1em;
   display: block;
   margin: -12px -16px 12px -16px;
@@ -12847,7 +12846,8 @@ span[id*="overlay_button"] {
   padding: 12px 16px;
   padding: 0.75rem 1rem;
 }
-.callout--adviser.callout--icon:before {
+.callout--adviser.callout--icon:before,
+.dap-panel--adviser.callout--icon:before {
   color: #FFF;
 }
 .adviser-nav .-current {
