Text fix on index

--- a/libs/jade/index.jade
+++ b/libs/jade/index.jade
@@ -73,7 +73,7 @@ block content
 					li
 						a(href="content.html") Content example
 					li
-						a(href="long-form.html") Long form content
+						a(href="long-form.html") Long form content example
 					//li
 					//	a(href="advisor.html") Advisor content
 					li
