Restructured docs to use styles, modules and templates

--- a/libs/jade/callout.jade
+++ b/libs/jade/callout.jade
@@ -6,7 +6,7 @@ extends ../template/template.jade
 block breadcrumbs
 	+breadcrumbs([
 		{title: "Home", href: "index.html"},
-		{title: "Molecules", href: "index.html#molecules"}, 
+		{title: "Modules", href: "index.html#modules"}, 
 		{title: "Callouts"}])
 
 block content
