--- a/libs/jade/cookie-monster.jade
+++ b/libs/jade/cookie-monster.jade
@@ -7,7 +7,7 @@ extends ../template/template.jade
 block breadcrumbs
 	+breadcrumbs([
 		{title: "Home", href: "index.html"},
-		{title: "Organisms", href: "index.html#organisms"}, 
+		{title: "Modules", href: "index.html#modules"}, 
 		{title: "Cookie Monster"}])
 
 block sidebar
