--- a/libs/jade/index.jade
+++ b/libs/jade/index.jade
@@ -17,8 +17,8 @@ block content
 					li
 						a(href="principles.html") Design principles
 		.row
-			.span3
-				h2#atoms Atoms
+			.span4
+				h2#styles Styles
 				ul
 					li
 						a(href="typography.html") Typography
@@ -42,8 +42,8 @@ block content
 								a(href="grid.html") Grid layout
 							li
 								a(href="new-grid.html") New grid layout
-			.span3
-				h2#molecules Molecules
+			.span4
+				h2#modules Modules
 				ul
 					li
 						a(href="callout.html") Callout
@@ -51,9 +51,6 @@ block content
 						a(href="collapse.html") Collapse
 					li
 						a(href="section-notice.html") Section Notices
-			.span3
-				h2#organisms Organisms
-				ul
 					li
 						a(href="toolbar.html") Content toolbar
 					li
@@ -67,7 +64,7 @@ block content
 								a(href="overlay.html") Modal/Overlay
 							li
 								a(href="reference.html") Reference tool
-			.span3
+			.span4
 				h2#templates Templates
 				ul
 					li
