--- a/libs/jade/new-grid.jade
+++ b/libs/jade/new-grid.jade
@@ -6,7 +6,7 @@ extends ../template/template.jade
 block breadcrumbs
 	+breadcrumbs([
 		{title: "Home", href: "index.html"}, 
-		{title: "Atoms", href: "index.html#atoms"},
+		{title: "Styles", href: "index.html#styles"},
 		{title: "Grid", href: "index.html#grid"},
 		{title: "New grid layout"}])
 
