--- a/libs/jade/fields.jade
+++ b/libs/jade/fields.jade
@@ -6,7 +6,7 @@ extends ../template/template.jade
 block breadcrumbs
 	+breadcrumbs([
 		{title: "Home", href: "index.html"},
-		{title: "Atoms", href: "index.html#atoms"},
+		{title: "Styles", href: "index.html#styles"},
 		{title: "Forms", href: "index.html#forms"},
 		{title: "Fields"}])
 
