--- a/libs/jade/overlay.jade
+++ b/libs/jade/overlay.jade
@@ -8,7 +8,7 @@ extends ../template/template.jade
 block breadcrumbs
 	+breadcrumbs([
 		{title: "Home", href: "index.html"}, 
-		{title: "Organisms", href: "index.html#organisms"}, 
+		{title: "Modules", href: "index.html#modules"}, 
 		{title: "Modals", href: "index.html#modals"}, 
 		{title: "Modal/Overlay"}])
 
