Include new alternative button

--- a/libs/base/buttons.less
+++ b/libs/base/buttons.less
@@ -19,6 +19,15 @@ input[type=button] {
     ); 
 }
 
+.btn-primary-cancel {
+    .btn( 
+        @btn-text:@heritage-blue,
+        @btn-background:@white,
+        @btn-background-hover:@heritage-blue-lightest,
+        @btn-border:@blue-lighter 
+    ); 
+}
+
 .btn-secondary {
     .btn (
     @white,
