--- a/libs/base/icons.less
+++ b/libs/base/icons.less
@@ -61,14 +61,14 @@
     width: 100%;
     left: 0;
 }
-.round() {
+.round(@round-colour: @white;) {
     /* Safari 3-4, iOS 1-3.2, Android 1.6- */
     -webkit-border-radius: 50%; 
     /* Firefox 1-3.6 */
     -moz-border-radius: 50%;   
     /* Opera 10.5, IE 9, Safari 5, Chrome, Firefox 4, iOS 4, Android 2.1+ */
     border-radius: 50%; 
-    border: 2px solid @white;
+    border: 2px solid @round-colour;
 }
 // Directions
 .tick-button-icon {
@@ -79,6 +79,12 @@
 }
 .left-button-icon {
     .btn-icon("\f053", left);
+}
+.back-button-icon {
+    .btn-icon("\f053", left, @heritage-blue-light);
+}
+.left-cancel-button-icon {
+    .btn-icon("\f00d", left, @heritage-blue-light);
 }
 .down-button-icon {
     .btn-icon("\f078");
