--- a/libs/mixins/buttons.less
+++ b/libs/mixins/buttons.less
@@ -3,12 +3,13 @@
 .btn(
         @btn-text: @heritage-blue;
         @btn-background: @aqua;
-        @btn-background-hover: darken(@btn-background, 10%) 
+        @btn-background-hover: darken(@btn-background, 10%);
+        @btn-border: @btn-background
     ){
     cursor: pointer;
     border-radius: @form-border-radius;
     background-color: @btn-background;
-    border: 1px solid @btn-background;
+    border: 1px solid @btn-border;
     color: @btn-text;
     font-weight: bold;
     .spacing(padding,@box-spacing-vertical,@box-spacing-horizontal);
@@ -16,8 +17,13 @@
     &:hover,
     &:focus,
     &:active {
+        & when (@btn-background = @btn-border) {
+            border: 1px solid @btn-background-hover;
+        }
+        & when not (@btn-background = @btn-border) {
+            border: 1px solid @btn-border;
+        }
         background-color: @btn-background-hover;
-        border: 1px solid @btn-background-hover;
         outline: 0;
     }
     &:focus {
