--- a/public/css/site.css
+++ b/public/css/site.css
@@ -3568,8 +3568,8 @@ button:active,
 input[type=submit]:active,
 input[type=reset]:active,
 input[type=button]:active {
-  background-color: #5cc0b5;
   border: 1px solid #5cc0b5;
+  background-color: #5cc0b5;
   outline: 0;
 }
 .btn:focus,
@@ -3599,11 +3599,35 @@ input[type=button]:focus {
 .btn-primary-light:hover,
 .btn-primary-light:focus,
 .btn-primary-light:active {
-  background-color: #81CEC6;
   border: 1px solid #81CEC6;
+  background-color: #81CEC6;
   outline: 0;
 }
 .btn-primary-light:focus {
+  -webkit-box-shadow: 0px 0px 0px 2px #FCBB69;
+  -moz-box-shadow: 0px 0px 0px 2px #FCBB69;
+  box-shadow: 0px 0px 0px 2px #FCBB69;
+}
+.btn-primary-cancel {
+  cursor: pointer;
+  border-radius: 2px;
+  background-color: #FFF;
+  border: 1px solid #caeaff;
+  color: #004B88;
+  font-weight: bold;
+  padding: 12px 16px;
+  padding: 0.75rem 1rem;
+  margin: 8px 8px 8px 0px;
+  margin: 0.5rem 0.5rem 0.5rem 0rem;
+}
+.btn-primary-cancel:hover,
+.btn-primary-cancel:focus,
+.btn-primary-cancel:active {
+  border: 1px solid #caeaff;
+  background-color: #f2f8ff;
+  outline: 0;
+}
+.btn-primary-cancel:focus {
   -webkit-box-shadow: 0px 0px 0px 2px #FCBB69;
   -moz-box-shadow: 0px 0px 0px 2px #FCBB69;
   box-shadow: 0px 0px 0px 2px #FCBB69;
@@ -3623,8 +3647,8 @@ input[type=button]:focus {
 .btn-secondary:hover,
 .btn-secondary:focus,
 .btn-secondary:active {
-  background-color: #003d6f;
   border: 1px solid #003d6f;
+  background-color: #003d6f;
   outline: 0;
 }
 .btn-secondary:focus {
@@ -3657,8 +3681,8 @@ input[type=button]:focus {
 .button--grey:focus,
 .btn-disabled:active,
 .button--grey:active {
-  background-color: #dfdfdf;
   border: 1px solid #dfdfdf;
+  background-color: #dfdfdf;
   outline: 0;
 }
 .btn-disabled:focus,
@@ -3682,8 +3706,8 @@ input[type=button]:focus {
 .btn-warning:hover,
 .btn-warning:focus,
 .btn-warning:active {
-  background-color: #bf1d21;
   border: 1px solid #bf1d21;
+  background-color: #bf1d21;
   outline: 0;
 }
 .btn-warning:focus {
@@ -3710,8 +3734,8 @@ input[type=button]:focus {
 .button--green:focus,
 .btn-success:active,
 .button--green:active {
-  background-color: #3a581f;
   border: 1px solid #3a581f;
+  background-color: #3a581f;
   outline: 0;
 }
 .btn-success:focus,
@@ -4192,14 +4216,13 @@ input[type="file"]::before {
   width: 2em;
   height: 2em;
   text-align: center;
-  border: 2px solid #000;
   /* Safari 3-4, iOS 1-3.2, Android 1.6- */
   -webkit-border-radius: 50%;
   /* Firefox 1-3.6 */
   -moz-border-radius: 50%;
   /* Opera 10.5, IE 9, Safari 5, Chrome, Firefox 4, iOS 4, Android 2.1+ */
   border-radius: 50%;
-  border: 2px solid #FFF;
+  border: 2px solid #000;
   position: absolute;
   top: 50%;
   -webkit-transform: translateY(-50%);
@@ -4346,8 +4369,8 @@ input[class*="dob-"] {
 .field-group--dropdown .dropdown:hover,
 .field-group--dropdown .dropdown:focus,
 .field-group--dropdown .dropdown:active {
-  background-color: #81CEC6;
   border: 1px solid #81CEC6;
+  background-color: #81CEC6;
   outline: 0;
 }
 .field-group--dropdown .dropdown:focus {
@@ -5388,6 +5411,60 @@ input.custom-dropdown__button {
   /* Opera 10.5, IE 9, Safari 5, Chrome, Firefox 4, iOS 4, Android 2.1+ */
   border-radius: 50%;
   border: 2px solid #FFF;
+  position: absolute;
+  top: 50%;
+  -webkit-transform: translateY(-50%);
+  -ms-transform: translateY(-50%);
+  transform: translateY(-50%);
+}
+.back-button-icon {
+  position: relative;
+  padding-left: 3.5em;
+}
+.back-button-icon:after {
+  left: 0.5em;
+  font-family: 'Helvetica', 'FontAwesome';
+  font-weight: 300;
+  content: "\f053";
+  color: #229cff;
+  line-height: 1.9em;
+  width: 2em;
+  height: 2em;
+  text-align: center;
+  /* Safari 3-4, iOS 1-3.2, Android 1.6- */
+  -webkit-border-radius: 50%;
+  /* Firefox 1-3.6 */
+  -moz-border-radius: 50%;
+  /* Opera 10.5, IE 9, Safari 5, Chrome, Firefox 4, iOS 4, Android 2.1+ */
+  border-radius: 50%;
+  border: 2px solid #229cff;
+  position: absolute;
+  top: 50%;
+  -webkit-transform: translateY(-50%);
+  -ms-transform: translateY(-50%);
+  transform: translateY(-50%);
+}
+.left-cancel-button-icon {
+  position: relative;
+  padding-left: 3.5em;
+}
+.left-cancel-button-icon:after {
+  left: 0.5em;
+  font-family: 'Helvetica', 'FontAwesome';
+  font-weight: 300;
+  content: "\f00d";
+  color: #229cff;
+  line-height: 1.9em;
+  width: 2em;
+  height: 2em;
+  text-align: center;
+  /* Safari 3-4, iOS 1-3.2, Android 1.6- */
+  -webkit-border-radius: 50%;
+  /* Firefox 1-3.6 */
+  -moz-border-radius: 50%;
+  /* Opera 10.5, IE 9, Safari 5, Chrome, Firefox 4, iOS 4, Android 2.1+ */
+  border-radius: 50%;
+  border: 2px solid #229cff;
   position: absolute;
   top: 50%;
   -webkit-transform: translateY(-50%);
@@ -13069,4 +13146,3 @@ span[id*="overlay_button"] {
     padding-left: 1em;
   }
 }
-/*# sourceMappingURL=site.css.map */
