--- a/libs/jade/buttons.jade
+++ b/libs/jade/buttons.jade
@@ -37,7 +37,7 @@ block content
 					// Recommending we use the lighter back button to differentiate between purposes
 				pre
 					code.language-html
-						| &lt;label for="buttonDescription"&gt;Buttons (directions)&lt;/label&gt;
+						| &lt;label for="buttonDescription"&gt;Buttons (directions alternative)&lt;/label&gt;
 						| &lt;button type="button" class="btn btn-primary-cancel back-button-icon"&gt;Back&lt;/button&gt;
 						| &lt;button type="button" class="btn btn-primary-cancel left-cancel-button-icon"&gt;Cancel&lt;/button&gt;
 
@@ -49,7 +49,7 @@ block content
 					// Recommending we use the lighter back button to differentiate between purposes
 				pre
 					code.language-html
-						| &lt;label for="buttonDescription"&gt;Buttons (directions)&lt;/label&gt;
+						| &lt;label for="buttonDescription"&gt;Buttons combined (directions alternative)&lt;/label&gt;
 						| &lt;button type="button" class="btn btn-primary-cancel back-button-icon"&gt;Back&lt;/button&gt;
 						| &lt;button type="button" class="btn btn-primary right-button-icon"&gt;Continue&lt;/button&gt;
 
