--- a/libs/base/buttons.less
+++ b/libs/base/buttons.less
@@ -23,8 +23,7 @@ input[type=button] {
     .btn( 
         @btn-text:@heritage-blue,
         @btn-background:@white,
-        @btn-background-hover:@heritage-blue-lightest,
-        @btn-border:@blue-lighter 
+        @btn-background-hover:@heritage-blue-lightest
     ); 
 }
 
