Changed summary list at top of page to use css columns

--- a/libs/base/forms.less
+++ b/libs/base/forms.less
@@ -315,6 +315,7 @@ input[type="file"]::before {
     .btn-icon("\F0D7",@color:@black,@border:no-border);
     padding-right: 0;
     background-color: @white;
+    display: inline-block;
     &:after {
         pointer-events:none;
     }
@@ -323,6 +324,7 @@ input[type="file"]::before {
         border: none;
         cursor: pointer;
         -webkit-appearance: none;
+        padding-right: 2em;
     }
 }
 
