--- a/libs/jade/budgeting-tool.jade
+++ b/libs/jade/budgeting-tool.jade
@@ -1,7 +1,7 @@
 block settings
-    - var title = "Budgeting Tool"
-    - var sidebar = true
-    - var toolbars = true
+    //- var title = "Budgeting Tool"
+    //- var sidebar = true
+    //- var toolbars = true
     //- var cookiemonster = true
     - var mockup = true
 
@@ -35,6 +35,7 @@ block content
                     .dropdown
                         select#exampleSelect1
                             option Add benefits
+                            option Add benefits longer
                     button.btn.btn-primary(type="button") Add
 
                 fieldset
