--- a/libs/jade/long-form.jade
+++ b/libs/jade/long-form.jade
@@ -42,15 +42,14 @@ block content
 
 			#overview.steps
 				h3 On this page
-				.flex-row
-					ul.col-md-6
+				.columns
+					ul
 						li
 							a(href="#step1") Step 1: Check if you need permission or approval
 						li
 							a(href="#step2") Step 2: Find good builders or contractors
 						li
 							a(href="#step3") Step 3: Get quotes before you decide who to use
-					ul.col-md-6
 						li
 							a(href="#step4") Step 4: Check there’s insurance in place
 						li
