Benefit tools mockup work

--- a/libs/base/forms.less
+++ b/libs/base/forms.less
@@ -445,7 +445,7 @@ input[class*="dob-"] {
             width: 35%;
             display: inline-block;
             border-radius: 0 @form-border-radius @form-border-radius 0;
-            .btn-primary-light;
+            .btn-primary;
             padding: 0;
         }
         input:first-of-type {
