--- a/libs/base/simplegrid.less
+++ b/libs/base/simplegrid.less
@@ -13,7 +13,7 @@
         margin: 0 -@gutters @gutters 0;
         clear: both;
         padding: 0;
-        overflow: hidden;
+        //overflow: hidden;
     }
     .ie8 & {
         margin: 0 -2% 2% 0 !important;
