--- a/libs/jade/budgeting-tool.jade
+++ b/libs/jade/budgeting-tool.jade
@@ -1,5 +1,5 @@
 block settings
-    //- var title = "Budgeting Tool"
+    - var title = "Budgeting Tool"
     //- var sidebar = true
     //- var toolbars = true
     //- var cookiemonster = true
@@ -30,12 +30,12 @@ block content
         .row
             .span8
                 h2 Benefits
-                fieldset
-                    label(for="addbenefit") Benefits
+                fieldset.example-box
+                    label(for="addbenefit") Add a benefit
                     .dropdown
                         select#exampleSelect1
-                            option Add benefits
-                            option Add benefits longer
+                            option Benefit one
+                            option Benefit two
                     button.btn.btn-primary(type="button") Add
 
                 fieldset
@@ -47,7 +47,28 @@ block content
                                 option Weekly
                                 option Monthly
                                 option Yearly
-                button.btn.btn-primary-light.left-button-icon(type="button") Income
+
+                fieldset
+                    label(for="income") Income support
+                    .field-group--dropdown
+                        input#income(placeholder="£", type="number")
+                        .dropdown
+                            select#exampleSelect1
+                                option Weekly
+                                option Monthly
+                                option Yearly
+
+                fieldset
+                    label(for="income") Income support
+                    .field-group--dropdown
+                        input#income(placeholder="£", type="number")
+                        .dropdown
+                            select#exampleSelect1
+                                option Weekly
+                                option Monthly
+                                option Yearly
+
+                button.btn.btn-primary-cancel.back-button-icon(type="button") Income
                 button.btn.btn-primary.right-button-icon(type="button") Household
             .span4
                 ul.tools--sidebar
