--- a/libs/styleguide/guide.less
+++ b/libs/styleguide/guide.less
@@ -116,12 +116,9 @@ ol li, ul li {
 .example-box {
     color: #333;
     .spacing(padding,@box-spacing);
-    .spacing(margin,@box-spacing,@box-spacing*3);
-    font-family: monaco,monospace;
-    line-height: 1.7em;
     background-color: #f8f8f8;
     border: 1px solid #dfe1e3;
-    border-radius: 2px;
+    border-radius: @form-border-radius;
     overflow: hidden;
     code {
         color: @gray-4;
