--- a/libs/jade/tables.jade
+++ b/libs/jade/tables.jade
@@ -12,26 +12,60 @@ block breadcrumbs
 block content
 	.articleContent.row
 		.span8
-			table(style="width:100%")
-				thead
-					tr
-						th(scope="col") th
-						th(scope="col") th
-						th(scope="col") th
-				tbody
-					tr
-						td td
-						td td
-						td td
-					tr
-						td td
-						td td
-						td td
-					tr
-						td td
-						td td
-						td td
-					tr
-						td td
-						td td
-						td td
+			.example-box-plain
+				table(style="width:100%")
+					thead
+						tr
+							th(scope="col") th
+							th(scope="col") th
+							th(scope="col") th
+					tbody
+						tr
+							td td
+							td td
+							td td
+						tr
+							td td
+							td td
+							td td
+						tr
+							td td
+							td td
+							td td
+						tr
+							td td
+							td td
+							td td
+			pre
+				code.language-html
+					| &lt;table&gt;
+					| 	&lt;thead&gt;
+					| 		&lt;tr&gt;
+					| 			&lt;th scope="col"&gt;th&lt;/th&gt;
+					| 			&lt;th scope="col"&gt;th&lt;/th&gt;
+					| 			&lt;th scope="col"&gt;th&lt;/th&gt;
+					| 		&lt;/tr&gt;
+					| 	&lt;/thead&gt;
+					| 	&lt;tbody&gt;
+					| 		&lt;tr&gt;
+					| 			&lt;td&gt;td&lt;/td&gt;
+					| 			&lt;td&gt;td&lt;/td&gt;
+					| 			&lt;td&gt;td&lt;/td&gt;
+					| 		&lt;/tr&gt;
+					| 		&lt;tr&gt;
+					| 			&lt;td&gt;td&lt;/td&gt;
+					| 			&lt;td&gt;td&lt;/td&gt;
+					| 			&lt;td&gt;td&lt;/td&gt;
+					| 		&lt;/tr&gt;
+					| 		&lt;tr&gt;
+					| 			&lt;td&gt;td&lt;/td&gt;
+					| 			&lt;td&gt;td&lt;/td&gt;
+					| 			&lt;td&gt;td&lt;/td&gt;
+					| 		&lt;/tr&gt;
+					| 		&lt;tr&gt;
+					| 			&lt;td&gt;td&lt;/td&gt;
+					| 			&lt;td&gt;td&lt;/td&gt;
+					| 			&lt;td&gt;td&lt;/td&gt;
+					| 		&lt;/tr&gt;
+					| 	&lt;/tbody&gt;
+					| &lt;/table&gt;
