--- a/libs/jade/new-grid.jade
+++ b/libs/jade/new-grid.jade
@@ -14,8 +14,8 @@ block content
 	.articleContent
 		.row
 			.span12
-				p The default page width is 1080px with a 12-spanumn grid. It is recommended for most content to use the two-thirds (content first) layout. This restricts line length to a more managable size and encourages a better reading pattern, #[a(href="#") improving cognition].
-				p The layout for pages should be 12 spanumns (full width), 3 or 4 spanumn, other variations can be used if needed.
+				p The default page width is 1080px with a 12-column grid. It is recommended for most content to use the two-thirds (content first) layout. This restricts line length to a more managable size and encourages a better reading pattern, #[a(href="#") improving cognition].
+				p The layout for pages should be 12 columns (full width), 3 or 4 column, other variations can be used if needed.
 		.row
 			.span12
 				h3 Two Thirds (content first)
